Fix Rectangle with gradient and color set to transparent

Fixes: QTBUG-134403
Pick-to: 6.8
Change-Id: Ibfbe6bc513d1e279d3d1d21661f8041500f02570
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit 7d3c2da9ffefeaf99d69e0faf88b65068579a6ab)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 83bbc685a22d423c32bbb830964cdfd675d5dd4f)